Refactor World NBT handling to use NBTCodec